--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso JavaScript - CoderHouse</title>
+    <title>Tienda Online</title>
 </head>
 <body>
 
     <header class="main-header">
-        Hola <span>JavaScript</span>
+        <span class="tienda">Tienda</span> <span class="online">Online</span>
     </header>
 
+    <div class="listaProductos">
+        <ul>
+            <li>(1) - Remera: $1500</li>
+            <li>(2) - Pantalón: $2000</li>
+            <li>(3) - Gorra: $1000</li>
+        </ul>
+    </div>
 
-    <script src="./JS/deafio4.js"></script>
+    <script src=".//JS/desafio4.js"></script>
 </body>
 </html>
